--- a/public/admin.html
+++ b/public/admin.html
@@ -5,8 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Admin</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <link rel="stylesheet" href="css/admin.css">
 </head>
 <body>
-    <h1>Admin</h1>
+    <div class="panelAcceso animated zoomInDown">
+        <img src="img/logo.png" alt="Logo Facturacion" class="mx-auto d-block animated tada" width="300">
+        <div class="input-group mt-1 mb-1">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon-usuario"><i class="fas fa-user"></i></span>
+            </div>
+            <input id="usuario" name="usuario" type="text" class="form-control" placeholder="Usuario" aria-label="Usuario" aria-describedby="basic-addon-usuario">
+        </div>
+        <div class="input-group mb-1">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon-clave"><i class="fas fa-key"></i></span>
+            </div>
+            <input id="clave" name="clave" type="text" class="form-control" placeholder="Contraseña" aria-label="Clave" aria-describedby="basic-addon-clave">
+        </div>
+        <div class="btn-group d-flex" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-primary" onclick="ingresar()" ><i class="fas fa-sign-in-alt"></i> Ingresar</button>
+            <button type="button" class="btn btn-danger" onclick="salir_acceso()"><i class="fas fa-sign-out-alt"></i> Salir</button>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="js/admin.js"></script>
 </body>
 </html>
