--- a/public/admin.html
+++ b/public/admin.html
@@ -23,16 +23,22 @@
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon-clave"><i class="fas fa-key"></i></span>
             </div>
-            <input id="clave" name="clave" type="text" class="form-control" placeholder="Contraseña" aria-label="Clave" aria-describedby="basic-addon-clave">
+            <input id="clave" name="clave" type="password" class="form-control" placeholder="Contraseña" aria-label="Clave" aria-describedby="basic-addon-clave">
         </div>
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
             <button type="button" class="btn btn-primary" onclick="ingresar()" ><i class="fas fa-sign-in-alt"></i> Ingresar</button>
             <button type="button" class="btn btn-danger" onclick="salir_acceso()"><i class="fas fa-sign-out-alt"></i> Salir</button>
         </div>
+        <div id="mensajes">
+            <div class="alert alert-danger mt-1" role="alert">
+                Usuario vacio.
+            </div>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/admin.js"></script>
 </body>
 </html>
